@@ -64,8 +64,16 @@ get_ws_format()
   else
     {
       data f_dat;
-      read_data(f_path, f_dat);
-      format = lexical_cast<unsigned int>(remove_ws(f_dat()));
+      try
+        {
+          read_data(f_path, f_dat);
+          format = lexical_cast<unsigned int>(remove_ws(f_dat()));
+        }
+      catch (exception & e)
+        {
+          E(false, F("workspace is corrupt: %s is invalid")
+                   % f_path);
+        }
       if (format == 1)
         {
           W(F("_MTN/format should not exist in a format 1 workspace; corrected"));
