@@ -1,3 +1,9 @@
+2006-12-15  Tero Koskinen  <tero.koskinen@iki.fi>
+
+	* work_migration.cc (get_ws_format): Fail cleanly when _MTN/format
+	is broken.
+	* tests/fail_cleanly_when__MTN_format_empty: Test.
+
 2006-12-13  Thomas Moschny  <thomas.moschny@gmx.de>
 
 	* options.cc (name): Call localize_monotone() before fetching an
